src/test/ui/parser/issue-76437-async.stderr
error: expected one of `extern`, `fn`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-76437-async.rs:4:11
   |
LL |     async pub fn t() {}
   |     ------^^^
   |     |     |
   |     |     expected one of `extern`, `fn`, or `unsafe`
   |     help: visibility `pub` must come before `async`: `pub async`

error: aborting due to previous error

